<resources>
    <string name="app_name">MetaFy</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_text">Welcome to MetaFy</string>
    <string name="login_text">Login with your Spotify Account</string>
    <string name="login_button_text">Login with Spotify</string>
    <string name="library_title">Your Playlists</string>
    <string name="placeholder">Placeholder</string>
    <string name="amount_songs">%1$d Songs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab">fab</string>
    <string name="add_tags">Add Tags</string>
    <string name="add">Add:</string>
    <string name="addbtn">addbtn</string>
    <string name="preference">Preference</string>
    <string name="tags">Tags</string>
    <string name="createplaylist">Create Playlist</string>
    <string name="preview_playlist">Preview Playlist:</string>
    <string name="search">Search</string>
    <string name="track_name">Track name</string>
    <string name="tag_name">Tag name</string>
    <string name="playlist_name">Playlist name</string>
    <string name="combination">Combination</string>
    <string name="combination_not_allowed">This combination is not allowed</string>
    <string name="my_liked_songs">My Liked Songs</string>
</resources>