<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CreatePlaylistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:gravity="center"
            android:text="@string/createplaylist"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaylistName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:hint="@string/playlist_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvCombination"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/combination"
                android:inputType="none"/>
            <Button
                android:id="@+id/btnCombinationBackspace"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_backspace"
                android:minWidth="32dp"
                android:minHeight="32dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnPlusCreate"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/ic_add"
                        android:minWidth="32dp"
                        android:minHeight="32dp" />

                    <Button
                        android:id="@+id/btnMinusCreate"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/ic_minus"
                        android:minWidth="32dp"
                        android:minHeight="32dp" />

                    <Button
                        android:id="@+id/btnEqualCreate"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/ic_equal"
                        android:minWidth="32dp"
                        android:minHeight="32dp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:hint="@string/tags">

                <AutoCompleteTextView
                    android:id="@+id/menuTagsCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tags"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_playlist"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCreatePlaylist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreatePlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/createplaylist"
            android:textSize="16sp"
            android:layout_marginVertical="8dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:backgroundTint="@color/spotify_green"
            app:cornerRadius="50dp"/>
    </LinearLayout>
</FrameLayout>