<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PreferenceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:gravity="center"
            android:text="@string/library_title"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:background="@drawable/bottomborder"
            android:text="@string/add_tags"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16sp"
                android:text="@string/add" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/addbtn"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTagsPreference"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTagName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/tag_flexbox_background"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp" />
        </androidx.recyclerview.widget.RecyclerView>
        <!--        <com.google.android.flexbox.FlexboxLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:flexDirection="row"-->
        <!--            app:alignItems="center"-->
        <!--            app:flexWrap="wrap">-->
        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:paddingVertical="5dp"-->
        <!--                android:paddingHorizontal="10dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Android">-->
        <!--            </TextView>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="iOS"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Windows"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Linux"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Unix"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="MaxOS"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Java"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="C++"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Python"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Kotlin"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Hadoop"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Solr"/>-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_margin="5dp"-->
        <!--                android:padding="5dp"-->
        <!--                android:background="@drawable/tag_flexbox_background"-->
        <!--                android:text="Lucene"/>-->
        <!--        </com.google.android.flexbox.FlexboxLayout>-->
    </LinearLayout>
</FrameLayout>